--- a/docs/notebooks/scorers_as_guardrails.ipynb
+++ b/docs/notebooks/scorers_as_guardrails.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "oKawLdN3SmJG"
    },
@@ -53,84 +53,127 @@
      "output_type": "stream",
      "text": [
       "Logged in as Weights & Biases user: timssweeney.\n",
-      "View Weave data at https://wandb.ai/timssweeney/scorers-as-guardrails/weave\n",
-      "🍩 https://wandb.ai/timssweeney/scorers-as-guardrails/r/call/019441d9-b322-7fe1-befc-03f10623326c\n",
-      "The prediction for 'Please make a prediction' is: Certainly!\n",
-      "Call(_op_name=<Future at 0x332d6bd30 state=running>, trace_id='019441d9-b321-7d62-bbad-faab27aca2b5', project_id='timssweeney/scorers-as-guardrails', parent_id=None, inputs={'input': 'Please make a prediction'}, id='019441d9-b322-7fe1-befc-03f10623326c', output='Certainly!', exception=None, summary={}, _display_name=None, attributes=AttributesDict({'weave': {'client_version': '0.51.28-dev0', 'source': 'python-sdk', 'os_name': 'Darwin', 'os_version': 'Darwin Kernel Version 23.6.0: Fri Nov 15 15:13:15 PST 2024; root:xnu-10063.141.1.702.7~1/RELEASE_ARM64_T6000', 'os_release': '23.6.0', 'sys_version': '3.10.8 (main, Dec  5 2022, 18:10:41) [Clang 14.0.0 (clang-1400.0.29.202)]'}}), started_at=None, ended_at=datetime.datetime(2025, 1, 7, 17, 39, 33, 794325, tzinfo=datetime.timezone.utc), deleted_at=None, _children=[], _feedback=None)\n",
-      "Certainly!\n",
-      "🍩 https://wandb.ai/timssweeney/scorers-as-guardrails/r/call/019441d9-b329-7d21-9dfb-6996730f9209\n",
-      "The results of the score are: ApplyScorerSuccess(result=False, score_call=Call(_op_name=<Future at 0x332dd2410 state=finished returned str>, trace_id='019441d9-b329-7d21-9dfb-698b4c4bb903', project_id='timssweeney/scorers-as-guardrails', parent_id=None, inputs={'self': ObjectRef(entity='timssweeney', project='scorers-as-guardrails', name='Apology-Checker', _digest='7HojDvIDVc788WyJAr7b0nQppAkGNLhzsT3DIV9d74A', _extra=()), 'output': 'Certainly!'}, id='019441d9-b329-7d21-9dfb-6996730f9209', output=False, exception=None, summary={}, _display_name=None, attributes=AttributesDict({'weave': {'client_version': '0.51.28-dev0', 'source': 'python-sdk', 'os_name': 'Darwin', 'os_version': 'Darwin Kernel Version 23.6.0: Fri Nov 15 15:13:15 PST 2024; root:xnu-10063.141.1.702.7~1/RELEASE_ARM64_T6000', 'os_release': '23.6.0', 'sys_version': '3.10.8 (main, Dec  5 2022, 18:10:41) [Clang 14.0.0 (clang-1400.0.29.202)]'}}), started_at=None, ended_at=datetime.datetime(2025, 1, 7, 17, 39, 33, 802125, tzinfo=datetime.timezone.utc), deleted_at=None, _children=[], _feedback=None))\n",
-      "🍩 https://wandb.ai/timssweeney/scorers-as-guardrails/r/call/019441d9-b764-7961-8dd2-4d7c936e6f60\n",
-      "Certainly!\n",
-      "🍩 https://wandb.ai/timssweeney/scorers-as-guardrails/r/call/019441d9-b766-7c72-b74f-4c9ed74bb921\n",
-      "The prediction for 'Please make a prediction' (Certainly!) is safe\n",
-      "🍩 https://wandb.ai/timssweeney/scorers-as-guardrails/r/call/019441d9-b767-7843-9349-31e585535893\n",
-      "I'm sorry, I can't do that.\n",
-      "🍩 https://wandb.ai/timssweeney/scorers-as-guardrails/r/call/019441d9-b769-7ff1-8c8a-d5bbdb1de3e0\n",
-      "The prediction for 'Please make a prediction with a test' (I'm sorry, I can't do that.) is NOT safe\n"
+      "View Weave data at https://wandb.ai/timssweeney/content-safety-guardrails/weave\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Example demonstrating how to implement guardrails in Weave.\n",
+    "This example shows a simple content safety checker that prevents\n",
+    "potentially harmful or negative responses.\n",
+    "\"\"\"\n",
+    "\n",
     "import weave\n",
     "\n",
-    "weave.init(\"scorers-as-guardrails\")\n",
+    "# Initialize Weave with a descriptive project name\n",
+    "weave.init(\"content-safety-guardrails\")\n",
     "\n",
     "\n",
-    "# First, we define a very simple scorer that checks if the model output contains any specific words.\n",
-    "class WordMatcher(weave.Scorer):\n",
-    "    words: list[str]\n",
+    "class ContentSafetyScorer(weave.Scorer):\n",
+    "    \"\"\"A scorer that evaluates content safety based on presence of specified phrases.\"\"\"\n",
+    "\n",
+    "    unsafe_phrases: list[str]\n",
     "    case_sensitive: bool = False\n",
     "\n",
     "    @weave.op\n",
-    "    def score(self, output: str) -> float:\n",
-    "        print(output)\n",
-    "        for word in self.words:\n",
-    "            if self.case_sensitive:\n",
-    "                if word in output:\n",
-    "                    return True\n",
-    "            else:\n",
-    "                if word.lower() in output.lower():\n",
-    "                    return True\n",
-    "        return False\n",
+    "    def score(self, output: str) -> bool:\n",
+    "        \"\"\"\n",
+    "        Evaluate output safety based on presence of unsafe phrases.\n",
+    "\n",
+    "        Args:\n",
+    "            output: The text output to evaluate\n",
+    "\n",
+    "        Returns:\n",
+    "            bool: True if output is safe, False if unsafe\n",
+    "        \"\"\"\n",
+    "        normalized_output = output if self.case_sensitive else output.lower()\n",
+    "\n",
+    "        for phrase in self.unsafe_phrases:\n",
+    "            normalized_phrase = phrase if self.case_sensitive else phrase.lower()\n",
+    "            if normalized_phrase in normalized_output:\n",
+    "                return False\n",
+    "        return True\n",
     "\n",
     "\n",
-    "# Next we define a function that makes a prediction\n",
     "@weave.op\n",
-    "def make_prediction(input: str) -> str:\n",
-    "    \"\"\"Dummy function that makes a prediction\"\"\"\n",
-    "    if \"test\" in input:\n",
-    "        return \"I'm sorry, I can't do that.\"\n",
+    "def generate_response(prompt: str) -> str:\n",
+    "    \"\"\"Simulate an LLM response generation.\"\"\"\n",
+    "    if \"test\" in prompt.lower():\n",
+    "        return \"I'm sorry, I cannot process that request.\"\n",
+    "    elif \"help\" in prompt.lower():\n",
+    "        return \"I'd be happy to help you with that!\"\n",
     "    else:\n",
-    "        return \"Certainly!\"\n",
+    "        return \"Here's what you requested: \" + prompt\n",
     "\n",
     "\n",
-    "# Next we call the op using the `call` method in order to return\n",
-    "# a Call object.\n",
-    "prediction, weave_call = make_prediction.call(\"Please make a prediction\")\n",
-    "print(f\"The prediction for 'Please make a prediction' is: {prediction}\")\n",
+    "async def process_with_guardrail(prompt: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Process user input with content safety guardrail.\n",
+    "    Returns the response if safe, or a fallback message if unsafe.\n",
+    "    \"\"\"\n",
+    "    # Initialize safety scorer\n",
+    "    safety_scorer = ContentSafetyScorer(\n",
+    "        name=\"Content Safety Checker\",\n",
+    "        unsafe_phrases=[\"sorry\", \"cannot\", \"unable\", \"won't\", \"will not\"],\n",
+    "    )\n",
     "\n",
-    "# Next, let's construct a scorer that checks if the prediction contains the word \"sorry\"\n",
-    "# We will name the scorer \"Apology Checker\" which will show up as the name of the score\n",
-    "# associated with the call.\n",
-    "scorer = WordMatcher(name=\"Apology Checker\", words=[\"sorry\"])\n",
+    "    # Generate response and get Call object\n",
+    "    response, call = generate_response.call(prompt)\n",
     "\n",
-    "# Now we can apply the scorer to the prediction\n",
-    "score_results = await weave_call.apply_scorer(scorer)\n",
-    "print(f\"The results of the score are: {score_results}\")\n",
+    "    # Apply safety scoring\n",
+    "    evaluation = await call.apply_scorer(safety_scorer)\n",
     "\n",
-    "# In a real-world scenario, we would use the score results to determine if the prediction is safe\n",
-    "# and possibly modify the control flow of the program based on the score.\n",
-    "for example_input in [\n",
-    "    \"Please make a prediction\",\n",
-    "    \"Please make a prediction with a test\",\n",
-    "]:\n",
-    "    prediction, weave_call = make_prediction.call(example_input)\n",
-    "    score_results = await weave_call.apply_scorer(scorer)\n",
-    "    if score_results.result:\n",
-    "        print(f\"The prediction for '{example_input}' ({prediction}) is NOT safe\")\n",
+    "    # Return response or fallback based on safety check\n",
+    "    if evaluation.result:\n",
+    "        return response\n",
     "    else:\n",
-    "        print(f\"The prediction for '{example_input}' ({prediction}) is safe\")"
+    "        return \"I cannot provide that response.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing content safety guardrails:\n",
+      "\n",
+      "Input: 'Please help me with my homework'\n",
+      "🍩 https://wandb.ai/timssweeney/content-safety-guardrails/r/call/01945209-4b69-7481-86d2-a15e08dac27e\n",
+      "🍩 https://wandb.ai/timssweeney/content-safety-guardrails/r/call/01945209-4b70-7241-aafb-774513b4fc3d\n",
+      "Response: I'd be happy to help you with that!\n",
+      "\n",
+      "Input: 'Can you run a test for me?'\n",
+      "🍩 https://wandb.ai/timssweeney/content-safety-guardrails/r/call/01945209-51bf-7c01-a9b6-958774440844\n",
+      "🍩 https://wandb.ai/timssweeney/content-safety-guardrails/r/call/01945209-51c4-7080-9055-b835ac7a1862\n",
+      "Response: I cannot provide that response.\n",
+      "\n",
+      "Input: 'Tell me a joke'\n",
+      "🍩 https://wandb.ai/timssweeney/content-safety-guardrails/r/call/01945209-53bb-7fb3-a8e6-76987c34114d\n",
+      "🍩 https://wandb.ai/timssweeney/content-safety-guardrails/r/call/01945209-53c5-75e0-8666-c97abddc9fdc\n",
+      "Response: Here's what you requested: Tell me a joke\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Example usage of the guardrail system.\"\"\"\n",
+    "test_prompts = [\n",
+    "    \"Please help me with my homework\",\n",
+    "    \"Can you run a test for me?\",\n",
+    "    \"Tell me a joke\",\n",
+    "]\n",
+    "\n",
+    "print(\"Testing content safety guardrails:\\n\")\n",
+    "\n",
+    "for prompt in test_prompts:\n",
+    "    print(f\"Input: '{prompt}'\")\n",
+    "    response = await process_with_guardrail(prompt)\n",
+    "    print(f\"Response: {response}\\n\")"
    ]
   }
  ],
