chore(docs): small docs fix

--- a/docs/docs/guides/tracking/tracing.mdx
+++ b/docs/docs/guides/tracking/tracing.mdx
@@ -749,7 +749,7 @@ In situations where you want to unconditionally disable tracing for the entire p
 
 **Client Initialization:**
 
-Sometimes, you may want to conditionally enable tracing for a specific initialization based on some condition. In this case, you can initialize the client with the `tracing_enabled` flag.
+Sometimes, you may want to conditionally enable tracing for a specific initialization based on some condition. In this case, you can initialize the client with the `disabled` flag in init settings.
 
 ```python
 import weave
