fix linting errors

--- a/docs/notebooks/Models_and_Weave_Integration_Demo.ipynb
+++ b/docs/notebooks/Models_and_Weave_Integration_Demo.ipynb
@@ -88,11 +88,16 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"WANDB_API_KEY\"] = userdata.get('WANDB_API_KEY')  # W&B Models and Weave\n",
-    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY') # OpenAI - for retrieval embeddings\n",
-    "os.environ[\"GEMINI_API_KEY\"] = userdata.get('GEMINI_API_KEY') # Gemini - for the base chat model"
+    "os.environ[\"WANDB_API_KEY\"] = userdata.get(\"WANDB_API_KEY\")  # W&B Models and Weave\n",
+    "os.environ[\"OPENAI_API_KEY\"] = userdata.get(\n",
+    "    \"OPENAI_API_KEY\"\n",
+    ")  # OpenAI - for retrieval embeddings\n",
+    "os.environ[\"GEMINI_API_KEY\"] = userdata.get(\n",
+    "    \"GEMINI_API_KEY\"\n",
+    ")  # Gemini - for the base chat model"
    ]
   },
   {
@@ -110,16 +115,17 @@
    },
    "outputs": [],
    "source": [
-    "import wandb\n",
-    "import weave\n",
     "import pandas as pd\n",
+    "import wandb\n",
+    "\n",
+    "import weave\n",
     "\n",
     "wandb.login()\n",
     "\n",
     "PROJECT = \"weave-cookboook-demo\"\n",
     "ENTITY = \"wandb-smle\"\n",
     "\n",
-    "weave.init(ENTITY+\"/\"+PROJECT)"
+    "weave.init(ENTITY + \"/\" + PROJECT)"
    ]
   },
   {
@@ -167,17 +173,20 @@
     }
    ],
    "source": [
-    "import weave\n",
+    "from typing import Any\n",
+    "\n",
     "from pydantic import PrivateAttr\n",
-    "from typing import Any, List, Dict, Optional\n",
     "from unsloth import FastLanguageModel\n",
-    "import torch\n",
+    "\n",
+    "import weave\n",
+    "\n",
     "\n",
     "class UnslothLoRAChatModel(weave.Model):\n",
     "    \"\"\"\n",
     "    We define an extra ChatModel class to be able store and version more parameters than just the model name.\n",
     "    Especially, relevant if we consider fine-tuning (locally or aaS) because of specific parameters.\n",
     "    \"\"\"\n",
+    "\n",
     "    chat_model: str\n",
     "    cm_temperature: float\n",
     "    cm_max_new_tokens: int\n",
@@ -189,36 +198,43 @@
     "    _tokenizer: Any = PrivateAttr()\n",
     "\n",
     "    def model_post_init(self, __context):\n",
-    "      # we can simply paste this from the \"Use\" tab from the registry\n",
-    "      run = wandb.init(project=PROJECT, job_type=\"model_download\")\n",
-    "      artifact = run.use_artifact(f\"{self.chat_model}\")\n",
-    "      model_path = artifact.download()\n",
+    "        # we can simply paste this from the \"Use\" tab from the registry\n",
+    "        run = wandb.init(project=PROJECT, job_type=\"model_download\")\n",
+    "        artifact = run.use_artifact(f\"{self.chat_model}\")\n",
+    "        model_path = artifact.download()\n",
     "\n",
-    "      # unsloth version (enable native 2x faster inference)\n",
-    "      self._model, self._tokenizer = FastLanguageModel.from_pretrained(\n",
-    "          model_name = model_path,\n",
-    "          max_seq_length = self.cm_max_new_tokens,\n",
-    "          dtype = self.dtype,\n",
-    "          load_in_4bit = self.cm_quantize,\n",
-    "      )\n",
-    "      FastLanguageModel.for_inference(self._model)\n",
+    "        # unsloth version (enable native 2x faster inference)\n",
+    "        self._model, self._tokenizer = FastLanguageModel.from_pretrained(\n",
+    "            model_name=model_path,\n",
+    "            max_seq_length=self.cm_max_new_tokens,\n",
+    "            dtype=self.dtype,\n",
+    "            load_in_4bit=self.cm_quantize,\n",
+    "        )\n",
+    "        FastLanguageModel.for_inference(self._model)\n",
     "\n",
     "    @weave.op()\n",
-    "    async def predict(self, query: List[str]) -> dict:\n",
-    "      # add_generation_prompt = true - Must add for generation\n",
-    "      input_ids = self._tokenizer.apply_chat_template(\n",
-    "          query, tokenize = True, add_generation_prompt = True, return_tensors = \"pt\",\n",
-    "      ).to(\"cuda\")\n",
+    "    async def predict(self, query: list[str]) -> dict:\n",
+    "        # add_generation_prompt = true - Must add for generation\n",
+    "        input_ids = self._tokenizer.apply_chat_template(\n",
+    "            query,\n",
+    "            tokenize=True,\n",
+    "            add_generation_prompt=True,\n",
+    "            return_tensors=\"pt\",\n",
+    "        ).to(\"cuda\")\n",
     "\n",
-    "      output_ids = self._model.generate(\n",
-    "          input_ids = input_ids, max_new_tokens = 64, use_cache = True, temperature = 1.5, min_p = 0.1\n",
-    "      )\n",
+    "        output_ids = self._model.generate(\n",
+    "            input_ids=input_ids,\n",
+    "            max_new_tokens=64,\n",
+    "            use_cache=True,\n",
+    "            temperature=1.5,\n",
+    "            min_p=0.1,\n",
+    "        )\n",
     "\n",
-    "      decoded_outputs = self._tokenizer.batch_decode(\n",
-    "          output_ids[0][input_ids.shape[1]:], skip_special_tokens=True\n",
-    "      )\n",
+    "        decoded_outputs = self._tokenizer.batch_decode(\n",
+    "            output_ids[0][input_ids.shape[1] :], skip_special_tokens=True\n",
+    "        )\n",
     "\n",
-    "      return ''.join(decoded_outputs).strip()"
+    "        return \"\".join(decoded_outputs).strip()"
    ]
   },
   {
@@ -378,19 +394,21 @@
    "source": [
     "MODEL_REG_URL = \"wandb32/wandb-registry-RAG Chat Models/Finetuned Llama-3.2:v3\"\n",
     "\n",
-    "max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
-    "dtype = None          # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
-    "load_in_4bit = True   # Use 4bit quantization to reduce memory usage. Can be False.\n",
+    "max_seq_length = 2048  # Choose any! We auto support RoPE Scaling internally!\n",
+    "dtype = (\n",
+    "    None  # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
+    ")\n",
+    "load_in_4bit = True  # Use 4bit quantization to reduce memory usage. Can be False.\n",
     "\n",
     "new_chat_model = UnslothLoRAChatModel(\n",
-    "    name = \"UnslothLoRAChatModelRag\",\n",
-    "    chat_model = MODEL_REG_URL,\n",
-    "    cm_temperature = 1.0,\n",
-    "    cm_max_new_tokens = max_seq_length,\n",
-    "    cm_quantize = load_in_4bit,\n",
-    "    inference_batch_size = max_seq_length,\n",
-    "    dtype = dtype,\n",
-    "    device = \"auto\",\n",
+    "    name=\"UnslothLoRAChatModelRag\",\n",
+    "    chat_model=MODEL_REG_URL,\n",
+    "    cm_temperature=1.0,\n",
+    "    cm_max_new_tokens=max_seq_length,\n",
+    "    cm_quantize=load_in_4bit,\n",
+    "    inference_batch_size=max_seq_length,\n",
+    "    dtype=dtype,\n",
+    "    device=\"auto\",\n",
     ")"
    ]
   },
@@ -435,7 +453,9 @@
     }
    ],
    "source": [
-    "await new_chat_model.predict([{\"role\": \"user\", \"content\": \"What is the capital of Germany?\"}])"
+    "await new_chat_model.predict(\n",
+    "    [{\"role\": \"user\", \"content\": \"What is the capital of Germany?\"}]\n",
+    ")"
    ]
   },
   {
@@ -459,7 +479,9 @@
    },
    "outputs": [],
    "source": [
-    "RagModel = weave.ref(\"weave:///wandb-smle/weave-cookboook-demo/object/RagModel:cqRaGKcxutBWXyM0fCGTR1Yk2mISLsNari4wlGTwERo\").get()"
+    "RagModel = weave.ref(\n",
+    "    \"weave:///wandb-smle/weave-cookboook-demo/object/RagModel:cqRaGKcxutBWXyM0fCGTR1Yk2mISLsNari4wlGTwERo\"\n",
+    ").get()"
    ]
   },
   {
@@ -879,9 +901,9 @@
     }
    ],
    "source": [
-    "with weave.attributes({'wandb-run-id': wandb.run.id}):\n",
-    "  # use .call attribute to retrieve both the result and the call in order to save eval trace to Models\n",
-    "  summary, call = await climate_rag_eval.evaluate.call(climate_rag_eval, RagModel)"
+    "with weave.attributes({\"wandb-run-id\": wandb.run.id}):\n",
+    "    # use .call attribute to retrieve both the result and the call in order to save eval trace to Models\n",
+    "    summary, call = await climate_rag_eval.evaluate.call(climate_rag_eval, RagModel)"
    ]
   },
   {
@@ -964,8 +986,10 @@
    ],
    "source": [
     "# log to models\n",
-    "wandb.run.log(pd.json_normalize(summary, sep='/').to_dict(orient=\"records\")[0])\n",
-    "wandb.run.config.update({\"weave_url\": f\"https://wandb.ai/wandb-smle/weave-cookboook-demo/r/call/{call.id}\"})\n",
+    "wandb.run.log(pd.json_normalize(summary, sep=\"/\").to_dict(orient=\"records\")[0])\n",
+    "wandb.run.config.update(\n",
+    "    {\"weave_url\": f\"https://wandb.ai/wandb-smle/weave-cookboook-demo/r/call/{call.id}\"}\n",
+    ")\n",
     "wandb.run.finish()"
    ]
   },
@@ -992,8 +1016,8 @@
    },
    "outputs": [],
    "source": [
-    "MODELS_OBJECT_VERSION = PUB_REFERENCE.digest # weave object version\n",
-    "MODELS_OBJECT_NAME = PUB_REFERENCE.name # weave object name"
+    "MODELS_OBJECT_VERSION = PUB_REFERENCE.digest  # weave object version\n",
+    "MODELS_OBJECT_NAME = PUB_REFERENCE.name  # weave object name"
    ]
   },
   {
@@ -1127,23 +1151,27 @@
    ],
    "source": [
     "models_url = f\"https://wandb.ai/{ENTITY}/{PROJECT}/weave/objects/{MODELS_OBJECT_NAME}/versions/{MODELS_OBJECT_VERSION}\"\n",
-    "models_link = f\"weave:///{ENTITY}/{PROJECT}/object/{MODELS_OBJECT_NAME}:{MODELS_OBJECT_VERSION}\"\n",
+    "models_link = (\n",
+    "    f\"weave:///{ENTITY}/{PROJECT}/object/{MODELS_OBJECT_NAME}:{MODELS_OBJECT_VERSION}\"\n",
+    ")\n",
     "\n",
     "with wandb.init(project=PROJECT, entity=ENTITY) as run:\n",
-    "  # create new Artifact\n",
-    "  artifact_model = wandb.Artifact(\n",
-    "      name = \"RagModel\", type = \"model\", description=\"Models Link from RagModel in Weave\", metadata={'url':models_url}\n",
-    "  )\n",
-    "  artifact_model.add_reference(models_link, name = \"model\", checksum = False)\n",
+    "    # create new Artifact\n",
+    "    artifact_model = wandb.Artifact(\n",
+    "        name=\"RagModel\",\n",
+    "        type=\"model\",\n",
+    "        description=\"Models Link from RagModel in Weave\",\n",
+    "        metadata={\"url\": models_url},\n",
+    "    )\n",
+    "    artifact_model.add_reference(models_link, name=\"model\", checksum=False)\n",
     "\n",
-    "  # log new artifact\n",
-    "  run.log_artifact(artifact_model, aliases=[MODELS_OBJECT_VERSION])\n",
+    "    # log new artifact\n",
+    "    run.log_artifact(artifact_model, aliases=[MODELS_OBJECT_VERSION])\n",
     "\n",
-    "  # link to registry\n",
-    "  run.link_artifact(\n",
-    "    artifact_model,\n",
-    "    target_path=\"wandb32/wandb-registry-RAG Models/RAG Model\"\n",
-    "  )"
+    "    # link to registry\n",
+    "    run.link_artifact(\n",
+    "        artifact_model, target_path=\"wandb32/wandb-registry-RAG Models/RAG Model\"\n",
+    "    )"
    ]
   }
  ],
