--- a/docs/notebooks/hf_dataset_evals.ipynb
+++ b/docs/notebooks/hf_dataset_evals.ipynb
@@ -42,6 +42,12 @@
       },
       "outputs": [],
       "source": [
+        "# Initialize variables\n",
+        "HUGGINGFACE_DATASET = \"wandb/ragbench-test-sample\"\n",
+        "WANDB_KEY = \"\"\n",
+        "WEAVE_TEAM = \"\"\n",
+        "WEAVE_PROJECT = \"\"\n",
+        "\n",
         "# Init weave and required libraries\n",
         "import wandb\n",
         "import weave\n",
@@ -51,8 +57,8 @@
         "from weave import Evaluation\n",
         "\n",
         "# Login to wandb and initialize weave\n",
-        "wandb.login(key=\"\")\n",
-        "client = weave.init(\"\")\n",
+        "wandb.login(key=WANDB_KEY)\n",
+        "client = weave.init(f\"{WEAVE_TEAM}/{WEAVE_PROJECT}\")\n",
         "\n",
         "# Apply nest_asyncio to allow nested event loops (needed for some notebook environments)\n",
         "nest_asyncio.apply()"
@@ -71,8 +77,7 @@
         "- This index approach allows us to maintain references to the original dataset.\n",
         "\n",
         "> **Note:**\n",
-        "We're using the index here to make it more generalizable, but it would be better to use a unique `id` column in the HF dataset.\n",
-        "This could also be saved as a pointer back to the HF dataset row, in a Weave dataset."
+        "> In the index mapping, we encode the `hf_hub_name` along with the `hf_id` to ensure each row has a unique identifier. This unique digest value is used for tracking and referencing specific dataset entries during evaluations."
       ]
     },
     {
@@ -84,13 +89,13 @@
       "outputs": [],
       "source": [
         "# Load the HuggingFace dataset\n",
-        "ds = load_dataset(\"wandb/ragbench-sentence-relevance-balanced\")\n",
+        "ds = load_dataset(HUGGINGFACE_DATASET)\n",
         "row_count = ds['train'].num_rows\n",
         "\n",
         "# Create an index mapping for the dataset\n",
         "# This creates a list of dictionaries with HF dataset indices\n",
         "# Example: [{\"hf_id\": 0}, {\"hf_id\": 1}, {\"hf_id\": 2}, ...]\n",
-        "hf_index = [{\"hf_id\": i} for i in range(row_count)]"
+        "hf_index = [{\"hf_id\": i, \"hf_hub_name\": HUGGINGFACE_DATASET} for i in range(row_count)]"
       ]
     },
     {
@@ -125,7 +130,7 @@
         "        Dict containing the prompt from the HF dataset\n",
         "    \"\"\"\n",
         "    hf_row = ds['train'][example['hf_id']]\n",
-        "    return {\"prompt\": hf_row['question']}\n",
+        "    return {\"prompt\": hf_row['question'], \"answer\": hf_row['response']}\n",
         "\n",
         "@weave.op()\n",
         "def hf_eval(hf_id: int, output: dict) -> dict:\n",
