--- a/docs/notebooks/hf_dataset_evals.ipynb
+++ b/docs/notebooks/hf_dataset_evals.ipynb
@@ -77,7 +77,9 @@
         "- This index approach allows us to maintain references to the original dataset.\n",
         "\n",
         "> **Note:**\n",
-        "> In the index mapping, we encode the `hf_hub_name` along with the `hf_id` to ensure each row has a unique identifier. This unique digest value is used for tracking and referencing specific dataset entries during evaluations."
+        ">\n",
+        "> In the index mapping, we encode the `hf_hub_name` along with the `hf_id` to ensure each row has a unique identifier.\\\n",
+        "This unique digest value is used for tracking and referencing specific dataset entries during evaluations."
       ]
     },
     {
