Added callouts for workaround

--- a/docs/notebooks/hf_dataset_evals.ipynb
+++ b/docs/notebooks/hf_dataset_evals.ipynb
@@ -19,6 +19,11 @@
    "source": [
     "# Using HuggingFace Datasets in evaluations with `preprocess_model_input`\n",
     "\n",
+    "## Note: This is a temporary workaround\n",
+    "> This guide demonstrates a workaround for using HuggingFace Datasets with Weave evaluations.<br /><br/>\n",
+    "We are actively working on developing more seamless integrations that will simplify this process.\\\n",
+    "> While this approach works, expect improvements and updates in the near future that will make working with external datasets more straightforward.\n",
+    "\n",
     "## Setup and imports\n",
     "First, we initialize Weave and connect to Weights & Biases for tracking experiments."
    ]
